[package]
name = "rocket-validation"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/somehowchris/rocket-validation"
keywords = ["rocket", "validation", "json", "data", "validator"]
categories = ["web-programming"]
rust-version = "1.59.0"
description = "Rocket Guards to support validation using validator"

[features]
rocket_okapi = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.1", default-features = false, features = [
    "json",
    "serde_json"
] }
validator = { version = "0.19.0", features = ["derive"] }
schemars = "0.8.21"
rocket_okapi = "0.9.0"

[[example]]
name = "json-validation"
path = "examples/json-validation/src/main.rs"

[[example]]
name = "query-validation"
path = "examples/query-validation/src/main.rs"

[[example]]
name = "form-validation"
path = "examples/form-validation/src/main.rs"
