[package]
name = "json-validation"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/somehowchris/rocket-validation"
rust-version = "1.59.0"
readme = "../.."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features=["json"] }
rocket-validation = { path = "../.." }
validator = "0.19.0"

